--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 :root {
     --purple: rgb(121, 8, 121);
     --white: rgb(255, 255, 255);
+    --grey: rgb(83, 83, 83);
 }
 
 *{
@@ -22,22 +23,58 @@
 #questions{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: center;
     flex: auto;
 }
 
 #start{
-    background-color: var(--purple);
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
     padding: 15px 32px;
-    color: var(--white);
+}
+
+#response {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-top: 1px solid var(--grey);
+}
+
+#Submit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 15px 32px;
+}
+
+label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 50%;
+    border: 1px solid var(--grey);
 }
 
 button{
+    background-color: var(--purple);
     border-radius: 8px;
+    color: var(--white);
 }
 
 h1 {
@@ -45,12 +82,8 @@ h1 {
 }
 
 li {
-    background-color: var(--purple);
-    font-size: 18px;
-    color: var(--white);
-    margin-top: 10px;
-    padding: 5px 15px;
-    width: 80%;
+    display: flex;
+    justify-content: left;
 }
 
         
